fix logo amd offer anchor, show slider on mobile

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -30,6 +30,10 @@ html {
     visibility: hidden;
 }
 
+.label {
+	max-height: 130px;
+}
+
 #entry-image img {
     max-width: 100%;
 }
